assignment_6/tests/fail/syntaxerrors/1/Error3.ram15.ram
class Error3 {
	public static void main(String[] args) {
		bool[] uhoh;
	}
}
